google clone /* comment */

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
+<!-- 01. index.html -->
+<!-- 01. style.css -->
+
+<!-- 02. ! tab 으로 기본 세팅하기 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- 03. css 링크 걸어주기 -->
     <link rel="stylesheet" href="style.css">
+<!-- 03. css 링크 걸어주기 -->
     <title>Document</title>
 </head>
 <body>
     <div class="wrap">
+<!-- 04. header 마크업 (wrap으로 감싸는 부분 포함) -->
         <header>
             <div class="header-left">
                 <span>햄버거</span>
@@ -19,11 +26,16 @@
                 <div>로그인</div>
             </div>
         </header>
+<!-- 04. header 마크업 (wrap으로 감싸는 부분 포함) -->
+
+<!-- 07. section 마크업 -->
         <section>
             <div class="logo_img">Google</div>
             <input class="main_search" type="text">
         </section>
-        <!-- 추가 -->
+<!-- 07. section 마크업 -->
+
+<!-- 09. footer 마크업 -->
         <footer>
             <p>대한민국</p>
             <p><span>동그라미</span>확인할 수 없는 위치</p>
@@ -40,6 +52,9 @@
                 </div>
             </div>
         </footer>
+<!-- 09. footer 마크업 -->
+
     </div>
 </body>
 </html>
+<!-- 02. !로 기본 세팅하기 -->
