clone coding google final

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- 03. css 링크 걸어주기 -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 <!-- 03. css 링크 걸어주기 -->
     <title>Document</title>
@@ -17,12 +18,12 @@
 <!-- 04. header 마크업 (wrap으로 감싸는 부분 포함) -->
         <header>
             <div class="header-left">
-                <span>햄버거</span>
-                <a href="#">전체</a>
-                <a href="#">이미지</a>
+                <span><i class="fas fa-bars"></i></span>
+                <a href="#" class="active">전체</a>
+                <a href="#" class="">이미지</a>
             </div>
             <div class="header-right">
-                <span>메뉴</span>
+                <span><i class="fas fa-ellipsis-h"></i></span>
                 <div>로그인</div>
             </div>
         </header>
@@ -30,15 +31,23 @@
 
 <!-- 07. section 마크업 -->
         <section>
-            <div class="logo_img">Google</div>
+            <div class="logo">
+                <span>G</span>
+                <span>o</span>
+                <span>o</span>
+                <span>g</span>
+                <span>l</span>
+                <span>e</span>
+            </div>
             <input class="main_search" type="text">
+            <i class="fas fa-search"></i>
         </section>
 <!-- 07. section 마크업 -->
 
 <!-- 09. footer 마크업 -->
         <footer>
             <p>대한민국</p>
-            <p><span>동그라미</span>확인할 수 없는 위치</p>
+            <p><span></span>확인할 수 없는 위치</p>
             <div class="etc">
                 <div>
                     <span>설정</span>
